# Routes/ComplaintRoute.js
@@ -6,8 +6,8 @@ const complaintController = require('../Controllers/ComplaintController');
 router.post('/create',auth.AuthJWT, complaintController.createComplaint);
 router.get('/getall', auth.superAdminJWT,complaintController.getAllComplaints);
 router.get('/filter',auth.AuthJWT, complaintController.filterComplaints);
-router.get('/by-email', auth.AuthJWT,complaintController.getComplaintsByAgency);
-router.get('/by-email', auth.BothJWT,complaintController.getComplaintsByUser);
+router.get('/getOne/agencyId', auth.AuthJWT,complaintController.getComplaintsByAgency);
+router.get('/getOne/:userId', auth.BothJWT,complaintController.getComplaintsByUser);
 router.put('/status/:id', auth.BothJWT, complaintController.changeComplaintStatus);
 router.get('/getOne/:id',auth.AuthJWT, complaintController.getComplaintById);
 router.put('/update/:id',auth.AuthJWT, complaintController.updateComplaint);
